// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageChooserField #error 1`] = `
<div>
  <div
    class="field image_chooser_field required error"
  >
    <label
      for="struct-01test"
    >
      Test Char Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="chooser image-chooser blank"
        >
          <div
            class="unchosen"
          >
            <button
              class="button action-choose button-small button-secondary"
              id="struct-01test"
              type="button"
            >
              Choose 
              an
               
              image
            </button>
          </div>
        </div>
      </div>
      <p
        class="help"
      >
        Sample help text.
      </p>
      <p
        class="error-message"
      >
        This field is required.
      </p>
    </div>
  </div>
</div>
`;

exports[`ImageChooserField #help_text 1`] = `
<div>
  <div
    class="field image_chooser_field"
  >
    <label
      for="struct-01test"
    >
      Test DocumentChooser Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="chooser image-chooser blank"
        >
          <div
            class="unchosen"
          >
            <button
              class="button action-choose button-small button-secondary"
              id="struct-01test"
              type="button"
            >
              Choose 
              an
               
              image
            </button>
          </div>
        </div>
      </div>
      <p
        class="help"
      >
        Sample help text.
      </p>
      
    </div>
  </div>
</div>
`;

exports[`ImageChooserField #label 1`] = `
<div>
  <div
    class="field image_chooser_field"
  >
    <label
      for="struct-01test"
    >
      Test DocumentChooser Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="chooser image-chooser blank"
        >
          <div
            class="unchosen"
          >
            <button
              class="button action-choose button-small button-secondary"
              id="struct-01test"
              type="button"
            >
              Choose 
              an
               
              image
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`ImageChooserField #minimal 1`] = `
<div>
  <div
    class="field image_chooser_field"
  >
    <label
      for="struct-01test"
    >
      Test
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="chooser image-chooser blank"
        >
          <div
            class="unchosen"
          >
            <button
              class="button action-choose button-small button-secondary"
              id="struct-01test"
              type="button"
            >
              Choose 
              an
               
              image
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`ImageChooserField #required 1`] = `
<div>
  <div
    class="field image_chooser_field required"
  >
    <label
      for="struct-01test"
    >
      Test DocumentChooser Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      >
        <div
          class="chooser image-chooser"
        >
          <div
            class="chosen"
          >
            <div
              class="preview-image"
            >
              <img
                alt="Test Image"
                title="Test Image"
              />
            </div>
            <ul
              class="actions"
            >
              <li>
                <button
                  class="button action-choose button-small button-secondary"
                  type="button"
                >
                  Choose another 
                  image
                </button>
              </li>
              <li>
                <a
                  class="edit-link button button-small button-secondary"
                  href="/image/edit/1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Edit this 
                  image
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <p
        class="help"
      >
        Sample help text.
      </p>
      
    </div>
  </div>
</div>
`;
